[package]
name = "aifilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
tracing = { version = "0.1.27", features = ["log"] }
tracing-subscriber = "0.3.17"
anyhow = "1.0.44"
axum = "0.6.20"
hyper = { version = "0.14.12", features = ["full"] }
